Created (migration) and passed thumbnails object to welcome page

--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -1,9 +1,14 @@
 html {
-  width: auto;
-  overflow-x: hidden;
+	width: auto;
+	overflow-x: hidden;
 }
 
 .container-fluid {
     padding-left: 0px !important;
     padding-right: 0px !important;
+}
+
+@font-face {
+    font-family: Roboto-Light;
+    src: url('/fonts/roboto/Roboto-Light.ttf');
 }
