--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -18,8 +18,8 @@ $brand-danger: #bf5329;
 
 // Typography
 $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
-$font-family-sans-serif: Roboto;
-$font-size-base: 16px;
+$font-family-sans-serif: Roboto-Light;
+$font-size-base: 14px;
 $line-height-base: 1.6;
 $text-color: #636b6f;
 
@@ -36,3 +36,7 @@ $input-color-placeholder: lighten($text-color, 30%);
 
 // Panels
 $panel-default-heading-bg: #fff;
+
+// Links
+$link-hover-color: none;
+$link-hover-decoration: none;
