--- a/resources/assets/sass/_welcome.scss
+++ b/resources/assets/sass/_welcome.scss
@@ -1,16 +1,34 @@
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {
-	width: 100% !important;
+	min-width: 100%;
+	height: 100vh !important;
 }
 
-.carousel-inner {
-	height: 500px !important;
-}
-
-.carousel-caption {
-    padding-bottom: 450px !important;
+.thumbnail {
+	border-radius: 10px;
 }
 
 .thumbnail > img, .thumbnail a > img {
-    height: 212px !important;
-    width: 100% !important;
+    height: 212px;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.tag {
+	background-color: #00b1b3; 
+	color: #fff; 
+	border-radius: 290486px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    font-size: 12px;
+    height: 24px;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    line-height: 16px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
