Now correctly showing each category associated with a thumbnail

--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -12,3 +12,10 @@ html {
     font-family: Roboto-Light;
     src: url('/fonts/roboto/Roboto-Light.ttf');
 }
+
+.card-count {
+	border-radius: 100%;
+	padding: 3.5px;
+	color: black;	
+	background-color: white;
+}
